api/deployment/base/deploy.webapi.k8s.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nagp-ecom-api
  labels:
    app: nagp-ecom-api
    type: api
    stack: nagp-ecom-api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nagp-ecom-api
      stack: nagp-ecom-api
  template:
    metadata:
      labels:
        app: nagp-ecom-api
        type: api
        stack: nagp-ecom-api
    spec:
      containers:
        - name: nagp-ecom-api
          image: nagp-ecom-webapi
          ports:
            - name: http
              containerPort: 8080
          resources:
            requests:
              cpu: 100m
              memory: 128Mi
            limits:
              cpu: 500m
              memory: 256Mi
