api/deployment/base/service.identity-api.k8s.yaml
apiVersion: v1
kind: Service
metadata:
  name: ecom-identity-api
  labels:
    app: ecom-identity-api
    type: api
    stack: nagp-ecom-api
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 8080
      name: svc-port-http
  selector:
    app: ecom-identity-api
    stack: nagp-ecom-api
