api/deployment/base/httproute.identity-api.k8s.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: ingress-nagp-ecom-identity
  labels:
    app: ecom-identity-api
    type: gateway-ingress
    stack: nagp-ecom-api
  namespace: nagp-ecom
spec:
  parentRefs:
    - name: nagp-ecom-gateway
      namespace: nagp-ecom
  rules:
    - name: identity-routes
      matches:
        - path:
            type: PathPrefix
            value: /connect
      backendRefs:
        - name: ecom-identity-api
          namespace: nagp-ecom
          port: 80
